# arcade

./: .gitignore  CMakeCommonLib.cmake  CMakeLists.txt  Doxyfile  README.md  flake.nix  justfile  main.cpp  mainpage.md
.github/workflows/: checks.yml
Arcade/: Arcade.cpp  Arcade.hpp  Args.cpp  Args.hpp  CMakeLists.txt  Engine.cpp  Engine.hpp  Entrypoint.hpp  Exception.cpp  Exception.hpp  Menu.cpp  Menu.hpp  SharedObject.cpp  SharedObject.hpp  Sprite.cpp  Sprite.hpp  main.cpp
Games/menu/: CMakeLists.txt  Menu.cpp  Menu.hpp
Games/menu/games/: CMakeLists.txt  Games.cpp
Games/menu/renderers/: CMakeLists.txt  Renderers.cpp
Games/nibbler/: CMakeLists.txt  Fruit.cpp  Map.cpp  Nibbler.cpp  Nibbler.hpp  Player.cpp
Games/snake/: CMakeLists.txt  Fruit.cpp  Player.cpp  Snake.cpp  Snake.hpp
Renderer/NCurses/: CMakeLists.txt  NCurses.cpp  NCurses.hpp
Renderer/SDL2/: CMakeLists.txt  SDL2.cpp  SDL2.hpp
Renderer/SFML/: CMakeLists.txt  SFML.cpp  SFML.hpp
cmake/: MakeDoc.cmake  MakeLib.cmake
doc/: .gitignore  header.html  mainpage.md
include/ASS/: Events.hpp  IEngine.hpp  IGame.hpp  IRenderer.hpp  ISprite.hpp  Vector2.hpp
lib/ASS/: .gitlab-ci.yml  CMakeLists.txt  README.md
lib/ASS/cmake/: MakeDoc.cmake  MakeLib.cmake  MakeTests.cmake
lib/ASS/dummy/: CMakeLists.txt
lib/ASS/include/ASS/: Events.hpp  IEngine.hpp  IGame.hpp  IRenderer.hpp  ISprite.hpp  Vector2.hpp
lib/ASS/test/: test_game.cpp  test_renderer.cpp
